# evita

./: .DEPS.git  .gitignore  .gitmodules  .gn  BUILD.gn  DEPS  README
common/: BUILD.gn  castable.h  castable_unittest.cc  common.gyp  common_export.h  either.h  maybe.h  maybe_test.cc  temporary_change_value.h
common/adopters/: reverse.h
common/adoptors/: reverse.h
common/memory/: ref_counted.h  ref_counted_unittest.cc  scoped_change.h  scoped_refptr.h  scoped_refptr_unittest.cc  singleton.h
common/strings/: atomic_string.cc  atomic_string.h  atomic_string_unittest.cc  string_piece.h
common/timer/: timer.cc  timer.h
common/tree/: abstract_node_iterator.h  ancestors_or_self.h  child_nodes.h  container_node.h  descendants.h  descendants_or_self.h  node.h  node_unittest.cc
common/win/: com_init.cc  com_init.h  com_verify.h  native_window.cc  native_window.h  point.cc  point.h  point_ostream.cc  point_ostream.h  rect.cc  rect.h  rect_ostream.cc  rect_ostream.h  rect_unittest.cc  registry.cc  registry.h  scoped_comptr.h  scoped_handle.h  singleton_hwnd.cc  singleton_hwnd.h  size.cc  size.h  size_ostream.cc  size_ostream.h  win32_verify.h
evita/: BUILD.gn  ExactStringMatch.cpp  ExactStringMatch.h  IStringCursor.h  RegexMatch.cpp  RegexMatch.h  ap_input_history.cpp  ap_input_history.h  ap_lisp_thread.cpp  ap_lisp_thread.h  ap_listener_buffer.cpp  ap_listener_buffer.h  ap_main.cc  ap_main.cpp  cm_CmdProc.cpp  cm_CmdProc.h  cm_commands.cpp  ctrl_StatusBar.cpp  ctrl_StatusBar.h  ctrl_TabBand.cpp  ctrl_TabBand.h  ctrl_TitleBar.cc  ctrl_TitleBar.cpp  ctrl_TitleBar.h  ed_BinTree.h  ed_Buffer.cpp  ed_Buffer.h  ed_BufferCore.cc  ed_BufferCore.cpp  ed_BufferCore.h  ed_BufferFind.cc  ed_BufferFind.cpp  ed_Interval.cpp  ed_Interval.h  ed_Mode.cpp  ed_Mode.h  ed_Range.cpp  ed_Style.h  ed_Undo.cpp  ed_Undo.h  (+85 more)
evita/base/: BUILD.gn  base_export.h  castable.h  castable_test.cc  either.h  evita_base_export.h  float_range.cc  float_range.h  float_range_test.cc  maybe.h  maybe_test.cc  ping_provider.cc  ping_provider.h  singleton.h
evita/content/: buffer_list_window.cc  buffer_list_window.h  content_window.cc  content_window.h
evita/core/: buffer.cc  buffer.h  buffer_test.cc  buffer_unittest.cc
evita/css/: BUILD.gn  color.cc  color.h  media.cc  media.h  media_observer.cc  media_observer.h  media_state.cc  media_state.h  media_type.cc  media_type.h  mock_media.cc  mock_media.h  property.cc  property.h  property_editor.cc  property_editor.h  property_set.cc  property_set.h  property_set_builder.cc  property_set_builder.h  property_set_editor.cc  property_set_editor.h  property_set_test.cc  rule.cc  rule.h  selector.cc  selector.h  selector_builder.cc  selector_builder.h  selector_parser.cc  selector_parser.h  selector_test.cc  style.cc  style.h  style_builder.cc  style_builder.h  style_editor.cc  style_editor.h  style_resolver.cc  (+12 more)
evita/dom/: BUILD.gn  Editor.idl  FilePath.idl  ScriptModule.idl  abstract_dom_test.cc  abstract_dom_test.h  bracket.js  bracket_externs.js  buffer.cc  buffer.h  closure_compiler_workaround.js  command_processor.js  command_processor_externs.js  commander.js  commander_externs.js  console.cc  console.h  console.js  console_externs.js  console_unittest.cc  converter.cc  converter.h  dictionary.cc  dictionary.h  document.cc  document.h  document.js  document_externs.js  document_list.js  document_set.cc  document_set.h  document_unittest.cc  document_window.cc  document_window.h  dom.gypi  dom_idl.gypi  dom_resources.grd  editor.cc  editor.h  editor.js  (+168 more)
evita/editor/: BUILD.gn  application.cc  application.cpp  application.h  application_proxy.cc  application_proxy.h  dialog_box.cc  dialog_box.h  dom_lock.cc  dom_lock.h  modal_message_loop_scope.cc  modal_message_loop_scope.h  scheduler.cc  scheduler.h  shell_handler.cc  shell_handler.h  switch_set.cc  switch_set.h  trace_log_controller.cc  trace_log_controller.h  watch_dog.cc  watch_dog.h
evita/frames/: BUILD.gn  edit_pane.cc  edit_pane.h  frame.cc  frame.h  frame_list.cc  frame_list.h  frame_observer.cc  frame_observer.h  title_bar.cc  title_bar.h
evita/gc/: BUILD.gn  collectable.cc  collectable.h  collector.cc  collector.h  local.h  member.h  visitable.cc  visitable.h  visitor.h  weak_ptr.h
evita/geometry/: BUILD.gn  int_point.cc  int_point.h  int_point_test.cc  int_rect.cc  int_rect.h  int_rect_test.cc  int_size.cc  int_size.h  int_size_test.cc
evita/gfx/: BUILD.gn  bitmap.cc  bitmap.h  brush.cc  brush.h  canvas.cc  canvas.h  canvas_observer.cc  canvas_observer.h  canvas_owner.cc  canvas_owner.h  color_f.cc  color_f.h  direct2d_factory_win.cc  direct2d_factory_win.h  direct_write_factory_win.cc  direct_write_factory_win.h  dpi_handler.cc  dpi_handler.h  dx_device.cc  dx_device.h  factory_set.cc  factory_set.h  font.cc  font.h  font_face.cc  font_face.h  forward.h  gfx_export.h  graphics.cc  graphics.h  imaging_factory_win.cc  imaging_factory_win.h  point.h  point_f.cc  point_f.h  rect.cpp  rect.h  rect_conversions.cc  rect_conversions.h  (+18 more)
evita/ginx/: BUILD.gn  array_buffer_view.cc  array_buffer_view.h  constructor_template.cc  constructor_template.h  context_holder.h  converter.cc  converter.h  either.h  function_template.h  function_template_builder.cc  function_template_builder.h  gin_embedders.h  ginx.h  ginx_util.cc  ginx_util.h  isolate_holder.cc  isolate_holder.h  nullable.h  object_template_builder.h  optional.h  per_isolate_data.cc  per_isolate_data.h  runner.cc  runner.h  runner_delegate.cc  runner_delegate.h  runner_test.cc  runner_unittest.cc  scriptable.h  (+7 more)
joana/: BUILD.gn
regex/: BUILD.gn  CPPLINT.cfg  IRegex.cpp  IRegex.h  precomp.cc  precomp.cpp  precomp.h  regex.cc  regex.gyp  regex.h  regex_bytecode.h  regex_bytecode.inc  regex_bytecodes.h  regex_compile.cc  regex_compile.cpp  regex_debug.cc  regex_debug.cpp  regex_debug.h  regex_defs.h  regex_exec.cc  regex_exec.cpp  regex_node.cc  regex_node.cpp  regex_node.h  regex_parse.cc  regex_parse.cpp  regex_scanner.cc  regex_scanner.h  regex_test.cc  regex_test.cpp  regex_unicode.cc  regex_util.cc  regex_util.h  retest.lisp  smoke.retest
(+2923 files in other folders)
