# Copyright 2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//testing/test.gni")

component("common") {
  sources = [
    "common_export.h",
    "win/com_init.cc",
    "win/com_init.h",
    "win/com_verify.h",
    "win/native_window.cc",
    "win/point.cc",
    "win/point.h",
    "win/rect.cc",
    "win/rect.h",
    "win/registry.cc",
    "win/scoped_comptr.h",
    "win/singleton_hwnd.cc",
    "win/singleton_hwnd.h",
    "win/size.cc",
    "win/size.h",
  ]

  defines = [ "COMMON_IMPLEMENTATION" ]

  public_deps = [
    "//base",
  ]
}

test("common_unittests") {
  sources = [
    "memory/scoped_refptr_unittest.cc",
    "tree/node_unittest.cc",
    "win/rect_unittest.cc",
  ]

  deps = [
    ":common",
    "//base/test:run_all_unittests",
    "//testing/gtest:gtest",
  ]
}
