# Copyright 2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/win/manifest.gni")
import("//testing/test.gni")

executable("evita") {
  sources = [
    "ap_main.cc",
    "evita.rc",
    "precomp.cc",
  ]

  deps = [
    ":application",
    "//build/win:default_exe_manifest",
  ]

  configs -= [ "//build/config/win:console" ]
  configs += [ "//build/config/win:windowed" ]
}

# TODO(eval1749): Once "evita_dom_unitests" has prices dependency, we should
# not have source_set "application".
source_set("application") {
  sources = [
    "ctrl_TitleBar.cc",
    "vi_EditPane.cc",
    "vi_Frame.cc",
  ]

  public_deps = [
    "//base",
    "//common",
    "//evita/editor",
    "//evita/metrics",
  ]
}
