# Copyright (c) 2016 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//testing/test.gni")

group("joana") {
  deps = [
    #"//joana/checker",
    "//joana/parser/lexer",
  ]
}

test("joana_tests") {
  output_name = "joana_tests"
  deps = [
    "//base/test:run_all_unittests",
    "//joana/base:test_files",
    "//joana/ir:test_files",
    "//joana/parser:test_files",
    "//testing/gtest",
  ]
}
