# Copyright 2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//testing/test.gni")

static_library("regex") {
  sources = [
    "precomp.cc",
    "regex.cc",
    "regex_compile.cc",
    "regex_debug.cc",
    "regex_exec.cc",
    "regex_node.cc",
    "regex_parse.cc",
    "regex_scanner.cc",
    "regex_unicode.cc",
    "regex_util.cc",
  ]

  deps = [
    "//base",
  ]
}

test("regex_tests") {
  sources = [
    "regex_test.cc",
  ]

  deps = [
    "//testing/gtest",
    "//testing/gtest:gtest_main",
    ":regex",
  ]
}
