# Copyright 2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//testing/test.gni")

static_library("regex") {
  sources = [
    "precomp.h",
    "regex.cc",
    "regex.h",
    "regex_bytecode.h",
    "regex_bytecodes.h",
    "regex_compile.cc",
    "regex_debug.cc",
    "regex_debug.h",
    "regex_defs.h",
    "regex_exec.cc",
    "regex_node.cc",
    "regex_node.h",
    "regex_parse.cc",
    "regex_scanner.h",
    "regex_unicode.cc",
    "regex_util.cc",
    "regex_util.h",
  ]

  deps = [
    "//base",
  ]
}

test("regex_tests") {
  sources = [
    "regex_test.cc",
  ]

  deps = [
    "//testing/gtest",
    "//testing/gtest:gtest_main",
    ":regex",
  ]
}
