# Copyright 2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//testing/test.gni")

source_set("css") {
  sources = [
    "color.cc",
    "style.cc",
    "style_resolver.cc",
    "style_rule.cc",
    "style_selector.cc",
    "style_sheet.cc",
    "style_sheet_observer.cc",
  ]
}

source_set("tests") {
  testonly = true
  sources = [
    "style_sheet_test.cc",
    "style_test.cc",
  ]

  public_deps = [
    ":css",
    "//testing/gtest",
  ]
}
