# Copyright 2015 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

idl_gen_dir = "$root_gen_dir/evita/idl"
idl_scripts_output_dir = "$root_gen_dir/evita/idl"
bindings_gen_dir = "$root_gen_dir/evita/bindings"
externs_gen_dir = "$root_gen_dir/evita/externs"

interface_idl_files = [
  "//evita/dom/clipboard/DataTransfer.idl",
  "//evita/dom/clipboard/DataTransferItem.idl",
  "//evita/dom/clipboard/DataTransferItemList.idl",
  "//evita/dom/Editor.idl",
  "//evita/dom/encodings/TextDecoder.idl",
  "//evita/dom/encodings/TextEncoder.idl",
  "//evita/dom/events/CompositionEvent.idl",
  "//evita/dom/events/CompositionSpan.idl",
  "//evita/dom/events/DocumentEvent.idl",
  "//evita/dom/events/Event.idl",
  "//evita/dom/events/EventTarget.idl",
  "//evita/dom/events/FocusEvent.idl",
  "//evita/dom/events/FormEvent.idl",
  "//evita/dom/events/KeyboardEvent.idl",
  "//evita/dom/events/MouseEvent.idl",
  "//evita/dom/events/UiEvent.idl",
  "//evita/dom/events/ViewEventTarget.idl",
  "//evita/dom/events/WheelEvent.idl",
  "//evita/dom/events/WindowEvent.idl",
  "//evita/dom/forms/ButtonControl.idl",
  "//evita/dom/forms/CheckboxControl.idl",
  "//evita/dom/forms/Form.idl",
  "//evita/dom/forms/FormControl.idl",
  "//evita/dom/forms/FormWindow.idl",
  "//evita/dom/forms/LabelControl.idl",
  "//evita/dom/forms/RadioButtonControl.idl",
  "//evita/dom/forms/TextFieldControl.idl",
  "//evita/dom/forms/TextFieldSelection.idl",
  "//evita/dom/os/AbstractFile.idl",
  "//evita/dom/os/File.idl",
  "//evita/dom/os/Process.idl",

  # Note: We have "Mode.idl" here for JS externs
  "//evita/dom/text/modes/Mode.idl",
  "//evita/dom/text/LineAndColumn.idl",
  "//evita/dom/text/MutationObserver.idl",
  "//evita/dom/text/MutationRecord.idl",
  "//evita/dom/text/Range.idl",
  "//evita/dom/text/RegularExpression.idl",
  "//evita/dom/timers/OneShotTimer.idl",
  "//evita/dom/timers/RepeatingTimer.idl",
  "//evita/dom/timers/Timer.idl",
  "//evita/dom/windows/DocumentWindow.idl",
  "//evita/dom/windows/EditorWindow.idl",

  # Note: We have "Point.idl" and "Rect.idl" here for JS externs
  "//evita/dom/windows/Point.idl",
  "//evita/dom/windows/Rect.idl",
  "//evita/dom/windows/Selection.idl",
  "//evita/dom/windows/TableSelection.idl",
  "//evita/dom/windows/TableWindow.idl",
  "//evita/dom/windows/TextSelection.idl",
  "//evita/dom/windows/TextWindow.idl",
  "//evita/dom/windows/Window.idl",
]

dictionary_idl_files = [
  "//evita/dom/encodings/TextDecodeOptions.idl",
  "//evita/dom/encodings/TextDecoderOptions.idl",
  "//evita/dom/encodings/TextEncodeOptions.idl",
  "//evita/dom/events/CompositionEventInit.idl",
  "//evita/dom/events/DocumentEventInit.idl",
  "//evita/dom/events/EventInit.idl",
  "//evita/dom/events/FocusEventInit.idl",
  "//evita/dom/events/FormEventInit.idl",
  "//evita/dom/events/KeyboardEventInit.idl",
  "//evita/dom/events/MouseEventInit.idl",
  "//evita/dom/events/UiEventInit.idl",
  "//evita/dom/events/WheelEventInit.idl",
  "//evita/dom/events/WindowEventInit.idl",
  "//evita/dom/forms/FormWindowInit.idl",
  "//evita/dom/os/MoveFileOptions.idl",
  "//evita/dom/text/MutationObserverInit.idl",
  "//evita/dom/text/RegExpInit.idl",
]

idl_lexer_parser_files = [
  "//third_party/ply/lex.py",
  "//third_party/ply/yacc.py",
  "//third_party/WebKit/Source/bindings/scripts/blink_idl_lexer.py",
  "//third_party/WebKit/Source/bindings/scripts/blink_idl_parser.py",
  "//tools/idl_parser/idl_lexer.py",
  "//tools/idl_parser/idl_node.py",
  "//tools/idl_parser/idl_parser.py",
]

static_js_externs_files = [
  "//evita/dom/bracket_externs.js",
  "//evita/dom/clipboard/clipboard_externs.js",
  "//evita/dom/commander_externs.js",
  "//evita/dom/commands/find_and_replace_externs.js",
  "//evita/dom/commands/spell_checker_externs.js",
  "//evita/dom/console_externs.js",
  "//evita/dom/css/style_externs.js",
  "//evita/dom/errors_externs.js",
  "//evita/dom/file_path_externs.js",
  "//evita/dom/js_console_externs.js",
  "//evita/dom/jslib/editors_externs.js",
  "//evita/dom/jslib/ordered_set_externs.js",
  "//evita/dom/jslib/windows_externs.js",
  "//evita/dom/key_names_externs.js",
  "//evita/dom/lexers/lexer_externs.js",
  "//evita/dom/lexers/lexers_externs.js",
  "//evita/dom/os/os_externs.js",
  "//evita/dom/text/document_externs.js",
  "//evita/dom/text/modes/modes_externs.js",
  "//evita/dom/text/text_position_externs.js",
  "//evita/dom/types_externs.js",
  "//evita/dom/windows/document_state_externs.js",
  "//evita/dom/windows/tab_data_externs.js",
]
